minitrace-macro/tests/ui/err/trace-interleaved.stderr
error: invalid argument
 --> tests/ui/err/trace-interleaved.rs:4:1
  |
4 | #[trace(struct)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
