minitrace-macro/tests/ui/err/trace-interleaved.rs
use minitrace::trace;

#[allow(unused_braces)]
#[trace(struct)]
#[warn(unused_braces)]
fn f() {}

fn main() {}
